# StringCalculator

./: CMakeLists.txt  README.md  main.cpp  simplestring.cpp  simplestring.h  stringcomplex.cpp  stringcomplex.h  stringsimple.cpp  stringsimple.h  verification.cpp  verification.h
